--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,18 @@
             <artifactId>jetty-servlet</artifactId>
             <version>9.4.43.v20210629</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
